2.2.1.dev0
----------------

- fix issue247: possible password leakage to log in devpi-client

- new experimental "-d|--detox" option to run tests via the "detox" distributed testing
  tool instead of "tox" which runs test environments one by one.

- address issue246: make sure we use vcs-export also for building docs (and
  respect --no-vcs for all building activity)


2.2.0
----------------

- improve internal testing mechanics

- fix regression for "devpi list -f" output which would fail when trying
  to present failures with recent devpi-server versions/tox outputs.

- fix issue222: fix help string

- fix issue190: introduce support for testing universal wheels (platform/interpreter
  specific wheels are not supported yet because they require tox support).  
  Testing a wheel requires that there also is an sdist next to it so
  that tox.ini and the tests can be discovered from it.  Note that this
  means your tox testrun setup must be able to run tests against an
  installed version of the package, not the sdist-inplace version.  If
  your tests reside in a subfolder that has no __init__.py this should
  usually be the case (at least with pytest).

- add experimental "refresh" command to invalidate the pypi release list cache
  of packages.

- show index configuration settings added by plugins in devpi-server >= 2.2.0.

2.1.0
----------------

- fix issue199: "devpi upload" and "devpi test" can now handle packages with
  dashes in their name.
- change: the following fixes change behavior if used in scripts
- fix issue174: ask for confirmation when deleting an index or user.
- fix issue156 and issue199: "devpi push" now uses "pkgname==version" like
  "list" and "test". This also fixes usage with packages containing dashes in
  their name.

2.0.5
----------------

- fix issue209: argument default handling changed in argparse in Python 2.7.9.
- fix issue163: use PIP_CONFIG_FILE environment variable if set.